# sfml-test

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
assets/levels/: test.lvl
dependencies/: CMakeLists.txt
src/: main.cpp  player.cpp  player.h
src/core/: entity.cpp  entity.h  flags.h  game.cpp  game.h  input_manager.cpp  input_manager.h  level.cpp  level.h  spritesheet.cpp  spritesheet.h  texturesheet.cpp  texturesheet.h  utilities.h
src/entities/: player.cpp  player.h  tile.cpp  tile.h
src/exceptions/: load_file_exception.h  texture_load_exception.h
src/graphics/: animation.cpp  animation.h  animation_controller.cpp  animation_controller.h  texture_sheet.cpp  texture_sheet.h  texturesheet.cpp  texturesheet.h
src/level-editor/: editor.cpp  editor.h  main.cpp  storable_level.cpp  storable_level.h  storable_tile.cpp  storable_tile.h
